add_executable (erkale_dumpxc dumpxc.cpp)
set_target_properties(erkale_dumpxc PROPERTIES OUTPUT_NAME "erkale_dumpxc${SUFFIX}")
target_link_libraries(erkale_dumpxc liberkale_cmp)
target_link_libraries(erkale_dumpxc liberkale_emd)
target_link_libraries(erkale_dumpxc liberkale)
# Link other libraries if necessary
if(BUILD_SHARED_LIBS)
else()
 target_link_libraries(erkale_dumpxc -lrt)
 target_link_libraries(erkale_dumpxc ${GSL_LIBRARIES})
 target_link_libraries(erkale_dumpxc ${LAPACK_LIBRARIES})
 target_link_libraries(erkale_dumpxc ${LIBINT_LIBRARIES})
 target_link_libraries(erkale_dumpxc ${LIBXC_LIBRARIES})
 target_link_libraries(erkale_dumpxc ${HDF5_LIBRARIES})
endif()

add_executable (erkale_moints moints.cpp)
set_target_properties(erkale_moints PROPERTIES OUTPUT_NAME "erkale_moints${SUFFIX}")
target_link_libraries(erkale_moints liberkale_cmp)
target_link_libraries(erkale_moints liberkale_emd)
target_link_libraries(erkale_moints liberkale)
# Link other libraries if necessary
if(BUILD_SHARED_LIBS)
else()
 target_link_libraries(erkale_moints -lrt)
 target_link_libraries(erkale_moints ${GSL_LIBRARIES})
 target_link_libraries(erkale_moints ${LAPACK_LIBRARIES})
 target_link_libraries(erkale_moints ${LIBINT_LIBRARIES})
 target_link_libraries(erkale_moints ${LIBXC_LIBRARIES})
 target_link_libraries(erkale_moints ${HDF5_LIBRARIES})
endif()

add_executable (erkale_formchk formchk.cpp)
set_target_properties(erkale_formchk PROPERTIES OUTPUT_NAME "erkale_formchk${SUFFIX}")
target_link_libraries(erkale_formchk liberkale_cmp)
target_link_libraries(erkale_formchk liberkale_emd)
target_link_libraries(erkale_formchk liberkale)
# Link other libraries if necessary
if(BUILD_SHARED_LIBS)
else()
 target_link_libraries(erkale_formchk -lrt)
 target_link_libraries(erkale_formchk ${GSL_LIBRARIES})
 target_link_libraries(erkale_formchk ${LAPACK_LIBRARIES})
 target_link_libraries(erkale_formchk ${LIBINT_LIBRARIES})
 target_link_libraries(erkale_formchk ${LIBXC_LIBRARIES})
 target_link_libraries(erkale_formchk ${HDF5_LIBRARIES})
endif()

add_executable (erkale_guessbench guessbench.cpp)
set_target_properties(erkale_guessbench PROPERTIES OUTPUT_NAME "erkale_guessbench${SUFFIX}")
target_link_libraries(erkale_guessbench liberkale_cmp)
target_link_libraries(erkale_guessbench liberkale_emd)
target_link_libraries(erkale_guessbench liberkale)
# Link other libraries if necessary
if(BUILD_SHARED_LIBS)
else()
 target_link_libraries(erkale_guessbench -lrt)
 target_link_libraries(erkale_guessbench ${GSL_LIBRARIES})
 target_link_libraries(erkale_guessbench ${LAPACK_LIBRARIES})
 target_link_libraries(erkale_guessbench ${LIBINT_LIBRARIES})
 target_link_libraries(erkale_guessbench ${LIBXC_LIBRARIES})
 target_link_libraries(erkale_guessbench ${HDF5_LIBRARIES})
endif()

add_executable (erkale_densproj densproj.cpp)
set_target_properties(erkale_densproj PROPERTIES OUTPUT_NAME "erkale_densproj${SUFFIX}")
target_link_libraries(erkale_densproj liberkale_cmp)
target_link_libraries(erkale_densproj liberkale_emd)
target_link_libraries(erkale_densproj liberkale)
# Link other libraries if necessary
if(BUILD_SHARED_LIBS)
else()
 target_link_libraries(erkale_densproj -lrt)
 target_link_libraries(erkale_densproj ${GSL_LIBRARIES})
 target_link_libraries(erkale_densproj ${LAPACK_LIBRARIES})
 target_link_libraries(erkale_densproj ${LIBINT_LIBRARIES})
 target_link_libraries(erkale_densproj ${LIBXC_LIBRARIES})
 target_link_libraries(erkale_densproj ${HDF5_LIBRARIES})
endif()

add_executable (erkale_rimp2 rimp2.cpp)
set_target_properties(erkale_rimp2 PROPERTIES OUTPUT_NAME "erkale_rimp2${SUFFIX}")
target_link_libraries(erkale_rimp2 liberkale_cmp)
target_link_libraries(erkale_rimp2 liberkale_emd)
target_link_libraries(erkale_rimp2 liberkale)
# Link other libraries if necessary
if(BUILD_SHARED_LIBS)
else()
 target_link_libraries(erkale_rimp2 -lrt)
 target_link_libraries(erkale_rimp2 ${GSL_LIBRARIES})
 target_link_libraries(erkale_rimp2 ${LAPACK_LIBRARIES})
 target_link_libraries(erkale_rimp2 ${LIBINT_LIBRARIES})
 target_link_libraries(erkale_rimp2 ${LIBXC_LIBRARIES})
 target_link_libraries(erkale_rimp2 ${HDF5_LIBRARIES})
endif()

add_executable (erkale_oovl oovl.cpp)
set_target_properties(erkale_oovl PROPERTIES OUTPUT_NAME "erkale_oovl${SUFFIX}")
target_link_libraries(erkale_oovl liberkale_cmp)
target_link_libraries(erkale_oovl liberkale_emd)
target_link_libraries(erkale_oovl liberkale)
# Link other libraries if necessary
if(BUILD_SHARED_LIBS)
else()
 target_link_libraries(erkale_oovl -lrt)
 target_link_libraries(erkale_oovl ${GSL_LIBRARIES})
 target_link_libraries(erkale_oovl ${LAPACK_LIBRARIES})
 target_link_libraries(erkale_oovl ${LIBINT_LIBRARIES})
 target_link_libraries(erkale_oovl ${LIBXC_LIBRARIES})
 target_link_libraries(erkale_oovl ${HDF5_LIBRARIES})
endif()

add_executable (erkale_sapguess sapguess.cpp)
set_target_properties(erkale_sapguess PROPERTIES OUTPUT_NAME "erkale_sapguess${SUFFIX}")
target_link_libraries(erkale_sapguess liberkale_cmp)
target_link_libraries(erkale_sapguess liberkale_emd)
target_link_libraries(erkale_sapguess liberkale)
# Link other libraries if necessary
if(BUILD_SHARED_LIBS)
else()
 target_link_libraries(erkale_sapguess -lrt)
 target_link_libraries(erkale_sapguess ${GSL_LIBRARIES})
 target_link_libraries(erkale_sapguess ${LAPACK_LIBRARIES})
 target_link_libraries(erkale_sapguess ${LIBINT_LIBRARIES})
 target_link_libraries(erkale_sapguess ${LIBXC_LIBRARIES})
 target_link_libraries(erkale_sapguess ${HDF5_LIBRARIES})
endif()

# neo / neosp / hneoci depend on the openorbitaloptimizer header-only
# library (https://github.com/susilehtola/OpenOrbitalOptimizer).
# Probe a configurable include hint first; if the header isn't on
# disk, fall back to FetchContent so CI builds still work.
set(OPENORBITAL_INCLUDE_DIR "" CACHE PATH "Path to openorbitaloptimizer include dir (containing openorbitaloptimizer/scfsolver.hpp)")
find_path(OPENORBITAL_HEADER openorbitaloptimizer/scfsolver.hpp
  HINTS ${OPENORBITAL_INCLUDE_DIR} /home/work/openorbital)

if(NOT OPENORBITAL_HEADER)
  message(STATUS "openorbitaloptimizer header not found locally; fetching from GitHub")
  include(FetchContent)
  FetchContent_Declare(openorbitaloptimizer
    GIT_REPOSITORY https://github.com/susilehtola/OpenOrbitalOptimizer.git
    GIT_TAG        master
    GIT_SHALLOW    TRUE)
  # Download-only — we use OpenOrbitalOptimizer as a header-only
  # library and don't want its CMakeLists.txt to execute, since it
  # expects an `armadillo` CMake target that erkale's bare
  # find_package(Armadillo) (variable-style) doesn't create.
  FetchContent_GetProperties(openorbitaloptimizer)
  if(NOT openorbitaloptimizer_POPULATED)
    FetchContent_Populate(openorbitaloptimizer)
  endif()
  # Header lives in <src>/openorbitaloptimizer/, parent dir is the include root
  set(OPENORBITAL_HEADER "${openorbitaloptimizer_SOURCE_DIR}")
endif()

if(OPENORBITAL_HEADER)
  message(STATUS "openorbitaloptimizer headers: ${OPENORBITAL_HEADER}; building NEO targets")

  add_executable (erkale_neo neo.cpp)
  set_target_properties(erkale_neo PROPERTIES OUTPUT_NAME "erkale_neo${SUFFIX}")
  target_include_directories(erkale_neo PUBLIC "${OPENORBITAL_HEADER}")
  target_link_libraries(erkale_neo liberkale_cmp)
  target_link_libraries(erkale_neo liberkale_emd)
  target_link_libraries(erkale_neo liberkale)
  if(NOT BUILD_SHARED_LIBS)
   target_link_libraries(erkale_neo -lrt)
   target_link_libraries(erkale_neo ${GSL_LIBRARIES})
   target_link_libraries(erkale_neo ${LAPACK_LIBRARIES})
   target_link_libraries(erkale_neo ${LIBINT_LIBRARIES})
   target_link_libraries(erkale_neo ${LIBXC_LIBRARIES})
   target_link_libraries(erkale_neo ${HDF5_LIBRARIES})
  endif()

  add_executable (erkale_neosp neosp.cpp)
  set_target_properties(erkale_neosp PROPERTIES OUTPUT_NAME "erkale_neosp${SUFFIX}")
  target_include_directories(erkale_neosp PUBLIC "${OPENORBITAL_HEADER}")
  target_link_libraries(erkale_neosp liberkale_cmp)
  target_link_libraries(erkale_neosp liberkale_emd)
  target_link_libraries(erkale_neosp liberkale)
  if(NOT BUILD_SHARED_LIBS)
   target_link_libraries(erkale_neosp -lrt)
   target_link_libraries(erkale_neosp ${GSL_LIBRARIES})
   target_link_libraries(erkale_neosp ${LAPACK_LIBRARIES})
   target_link_libraries(erkale_neosp ${LIBINT_LIBRARIES})
   target_link_libraries(erkale_neosp ${LIBXC_LIBRARIES})
   target_link_libraries(erkale_neosp ${HDF5_LIBRARIES})
  endif()

  add_executable (erkale_hneoci hneoci.cpp)
  set_target_properties(erkale_hneoci PROPERTIES OUTPUT_NAME "erkale_hneoci${SUFFIX}")
  target_include_directories(erkale_hneoci PUBLIC "${OPENORBITAL_HEADER}")
  target_link_libraries(erkale_hneoci liberkale_cmp)
  target_link_libraries(erkale_hneoci liberkale_emd)
  target_link_libraries(erkale_hneoci liberkale)
  if(NOT BUILD_SHARED_LIBS)
   target_link_libraries(erkale_hneoci -lrt)
   target_link_libraries(erkale_hneoci ${GSL_LIBRARIES})
   target_link_libraries(erkale_hneoci ${LAPACK_LIBRARIES})
   target_link_libraries(erkale_hneoci ${LIBINT_LIBRARIES})
   target_link_libraries(erkale_hneoci ${LIBXC_LIBRARIES})
   target_link_libraries(erkale_hneoci ${HDF5_LIBRARIES})
  endif()
else()
  message(STATUS "openorbitaloptimizer header not found; skipping NEO targets (set OPENORBITAL_INCLUDE_DIR to enable)")
endif()
